Implemented a Driver Builder allowing for command line arguments to be passed in for browser and headless mode

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
             <configurationParameters>
               cucumber.junit-platform.naming-strategy=long
             </configurationParameters>
+            <systemPropertyVariables>
+              <browser>${browser}</browser>
+              <headless>${headless}</headless>
+            </systemPropertyVariables>
           </properties>
         </configuration>
       </plugin>
